--- a/src/main/webapp/financial_admin/sales_and_commission.html
+++ b/src/main/webapp/financial_admin/sales_and_commission.html
@@ -170,12 +170,12 @@
               <label for="type">Tipo</label>
                 <div class="input">
                   <div class="inline-inputs">
-                      <select class="local_storage" name="productclass" id="productclass">
-                          <option value='1,0'>Todos</option>
-                          <option value='1'>Produtos</option>
-                          <option value='0'>Serviços</option>
-                       </select>
-                       <span class="help-block">Tipos de Comissões (ex: Prod / Ser)</span>
+                    <select class="local_storage" name="productclass" id="productclass">
+                        <option value='1,0'>Todos</option>
+                        <option value='1'>Produtos</option>
+                        <option value='0'>Serviços</option>
+                     </select>
+                     <span class="help-block">Tipos de Comissões (ex: Prod / Ser)</span>
                   </div>
                 </div>
             </div>
@@ -183,14 +183,14 @@
               <label for="dttype_commission">Tipo Data lanc</label>
                 <div class="input">
                   <div class="inline-inputs">
-                      <select class="local_storage" name="dttype_commission" id="dttype_commission">
-                          <option value='0'>Vencimento</option>
-                          <option value='1'>Competência</option>
-                          <option value='2'>Pagamento</option>
-                      </select>
-                      <a href="" class="_popover_basic" rel="popover" data-content="Determina se os lançamentos financeiros serão acessados pela data de Vencimento, Pagamento ou Competência" data-original-title="Informação">
-                        <img width='20' src="/images/info.gif"/>
-                      </a>
+                    <select class="local_storage" name="dttype_commission" id="dttype_commission">
+                        <option value='0'>Vencimento</option>
+                        <option value='1'>Competência</option>
+                        <option value='2'>Pagamento</option>
+                    </select>
+                    <a href="" class="_popover_basic" rel="popover" data-content="Determina se os lançamentos financeiros serão acessados pela data de Vencimento, Pagamento ou Competência, o mais comum no caso de comissão é por data de competência" data-original-title="Informação">
+                      <img width='20' src="/images/info.gif"/>
+                    </a>
                   </div>
                 </div>
             </div>
