--- a/src/main/webapp/financial/total_to_payment.html
+++ b/src/main/webapp/financial/total_to_payment.html
@@ -61,11 +61,11 @@
             <div class="input">
               <div class="inline-inputs">
                   <select class="local_storage" name="dttype_commission" id="dttype_commission">
-                      <option value='0'>Vencimento</option>
                       <option value='1'>Competência</option>
+                      <option value='0'>Vencimento</option>
                       <option value='2'>Pagamento</option>
                   </select>
-                  <a href="" class="_popover_basic" rel="popover" data-content="Determina se os lançamentos financeiros serão acessados pela data de Vencimento, Pagamento ou Competência" data-original-title="Informação">
+                  <a href="" class="_popover_basic" rel="popover" data-content="Determina se os lançamentos financeiros serão acessados pela data de Vencimento, Pagamento ou Competência, o mais comum no caso de comissão é por data de competência" data-original-title="Informação">
                     <img width='20' src="/images/info.gif"/>
                   </a>
               </div>
