<br/> to get better results in mozilla firefox calendar - need to be verified for safari/opera

--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -73,6 +73,8 @@
 			</div>
 		</span>
 	</span>
+	<!-- rigel 08/2018 coloquei o br para firefox - não afetou o chrome -->
+	<br/>
 	<div id="calendar"></div>
 	<span class='lift:UserSnippet.usersJsonFromCalendar'>
 	</span>
