company new attr - customer shoesize

--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="clearfix lift:SecuritySnippet.hasBMIndexModule">
-                          <label for="weight">Peso/Altura/IMC</label>
+                          <label for="weight">Peso/Altura/IMC/Nr calçado</label>
                           <div class="input">
                             <div class='inline-inputs'>
                                 <div class="input-append" style='float:left; padding-right:10px'>
@@ -190,6 +190,10 @@
                                     <div class="input">
                                     <input name="bmi" id="bmi" disabled="true" class = "large"/>
                                     </div>
+                                </div>
+                                <div class="input-append" style='float:left; padding-right:10px'>
+                                  <input class="mini" id="shoesize" name="shoesize" size="30" type="text"/>
+                                  <span class="add-on"><img width="16" src='/images/shoesize.png'/></span>
                                 </div>
                             </div>
                           </div>
