--- a/src/main/webapp/financial_cashier/comman_conference.html
+++ b/src/main/webapp/financial_cashier/comman_conference.html
@@ -17,8 +17,10 @@
                         <select class="xlarge url_parameter" name="cashier" multiple="multiple" id='cashier'></select>
                         <span class="help-block">Selecione um caixa na lista ou digite o número</span>
                       </div>
-                      <div class="input">
-                          <input class="mini url_parameter" id="number" name="number" size="5 " type="number"/>           
+                      <input type="hidden" class="has-financial-manager lift:SecuritySnippet.isFinancialManager" value="1">
+                      <div class="input lift:SecuritySnippet.isFinancialManager">
+                        <input class="mini url_parameter" id="number" name="number" size="5 " type="number"/>           
+                          <span class="help-block">Ou digite o número</span>
                       </div>
                     </div>
                     <div class="clearfix">
@@ -246,7 +248,7 @@
       </tr>
     </table>
     <h1>Saídas/Entradas     
-      <a href="" class="_popover_basic" rel="popover" data-content="As entradas e  saídas de caixa feitas diretamente através de lançamentos no financeiro só são exibidas quando um caixa é especificado" data-original-title="Informação">
+      <a href="" class="_popover_basic" rel="popover" data-content="As entradas e saídas de caixa feitas diretamente através de lançamentos no financeiro só são exibidas quando um caixa é especificado" data-original-title="Informação">
       <img width='20' src="/images/info.gif"/>
       </a>
     </h1>
