customer treatment rank

--- a/src/main/webapp/calendar.html
+++ b/src/main/webapp/calendar.html
@@ -327,6 +327,11 @@
 								<img width="16px" src="/images/messages_forward.png">
 								Notificar <span data-i18n='Cliente'></span>
 							</a>
+					    	<a type="button" class="lift:SecuritySnippet.isSuperAdmin 
+					    	hide_mobile btn primary send_rank_email_customer">
+								<img width="16px" src="/images/messages_forward.png">
+								Avaliar <span data-i18n='Cliente'></span>
+							</a>
 					    	<a type="button" class="hide_mobile lift:SecuritySnippet.isCustomer btn primary send_email_user">
 								<img width="16px" src="/images/messages_forward.png">
 								Not <span data-i18n='Profissional'></span>
