--- a/src/main/webapp/financial_admin/payment_forms.html
+++ b/src/main/webapp/financial_admin/payment_forms.html
@@ -228,6 +228,20 @@
                     </div>
                   </div>
                 </div>            
+                <div class="clearfix">
+                  <label for="user">Profissional</label>
+                  <div class="input">
+                    <div class='inline-inputs'>
+                      <div class="input-prepend" style='float:left; padding-right:20px'>
+                        <select name='user' class="large user">
+                        </select>
+                        <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/paymenttype.html#special' rel="popover" class="_popover_basic _help">
+                        <img src="/images/info.gif" width="20">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="clearfix lift:SecuritySnippet.hasBpmonthlyModule">
                   <label for="bpmonthly">Baixa de sessão de Mensalidade?</label>
                   <div class="input">
