--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -133,7 +133,7 @@
                 <div class="input">
                   <span>
                     <input data-url-name="bp_sponsor" class="mini id_customer_search url_parameter value_to_env" data-env-value='CUSTOMER' id='bp_sponsor' name="bp_sponsor" /> 
-                    <input class="name_customer_search" name="bp_sponsorname" id="bp_sponsorname"  size="30" type="text" placeholder="Nome"/>    
+                    <input class="name_customer_search" name="bp_sponsorname" id="bp_sponsorname"  size="30" type="text" placeholder="Nome" data-msg_off='true'/>    
                   </span>
                 </div>
               </div>
@@ -142,7 +142,8 @@
                 <div class="input">
                   <span>
                     <input class="mini id_customer_search value_to_env" data-env-value='USER' id='bp_manager' name="bp_manager" /> 
-                    <input class="name_customer_search"  name="manager" id="manager"  size="30" type="text" placeholder="Nome" data-just_user='true'/>
+                    <input class="name_customer_search"  name="manager" id="manager"  size="30" type="text" placeholder="Nome" data-just_user='true'
+                    data-msg_off='true'/>
                   </span>
                   <span class="help-block">Responsável</span>
                 </div>
