--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -107,7 +107,7 @@
                                 <span>
                                 <img class="customer_search_button" width='24' src="/images/search.png"/>
                                 <input class='mini id_customer_search url_parameter' id='bp_manager' name="bp_manager" /> 
-                                <input class="name_customer_search" name="manager" id="manager"  size="30" type="text" placeholder="Nome"/>    
+                                <input class="name_customer_search" name="manager" id="manager"  size="30" type="text" placeholder="Nome" data-msg_off='true'/>    
                                 </span>
                             </div>
                         </div>
@@ -392,7 +392,7 @@
                             <div class="input">
                                 <span>
                                 <input class='mini id_customer_search' id='bp_indicatedby' name="bp_indicatedby" /> 
-                                <input class="name_customer_search" name="indicatedby" id="indicatedby"  size="30" type="text" placeholder="Nome"/>    
+                                <input class="name_customer_search" name="indicatedby" id="indicatedby"  size="30" type="text" placeholder="Nome" data-msg_off='true'/>    
                                 </span>
                             </div>
                         </div>
