--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -403,7 +403,7 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">.</span>
-                    <span style='color:black;' class="add-on hide_mobile"></span>
+                    <span style='color:black;' class="add-on"></span>
                     <input class="xlarge" id="obs" name="obs" type="text"/>
                     <span class="help-block"></span>
                 </div>
@@ -419,7 +419,7 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">.</span>
-                    <span style='color:black;' class="add-on hide_mobile"></span>
+                    <span style='color:black;' class="add-on"></span>
                     <input class="xlarge" id="obs" name="obs" type="text"/>
                     <span class="help-block"></span>
                 </div>
@@ -433,7 +433,7 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">.</span>
-                    <span style='color:black;' class="add-on hide_mobile"></span>
+                    <span style='color:black;' class="add-on"></span>
                     <input class="xlarge" id="obs" name="obs" type="text"/>
                     <span class="help-block"></span>
                 </div>
@@ -446,7 +446,7 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">.</span>
-                    <span style='color:black;' class="add-on hide_mobile"></span>
+                    <span style='color:black;' class="add-on"></span>
                     <input class="xlarge" id="obs" name="obs" type="text"/>
                     <span class="help-block"></span>
                 </div>
@@ -463,7 +463,7 @@
 
                 <div class="input">
                     <span id='labeltop' class="label-top">paragraph</span>
-                    <textarea class="xlarge" name="" id="" rows="5"></textarea>
+                    <textarea class="xlarge" name="" id="" rows="3"></textarea>
                     <span class="help-block"></span>
                 </div>
             </div>
@@ -478,7 +478,7 @@
                     <div class='inline-inputs'>
                         <div class="input-prepend" style='float:left; padding-right:10px'>
                             <span id='labeltop' class="label-top">uai só</span>
-                            <span style='color:black;' class="add-on hide_mobile"></span> 
+                            <span style='color:black;' class="add-on"></span> 
                             <select class="xlarge"></select>
                             <span class="help-block"></span>
                         </div>
@@ -495,7 +495,7 @@
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">uai meio</span>
-                    <span style='color:black;' class="add-on hide_mobile"></span>
+                    <span style='color:black;' class="add-on"></span>
                     <select class="xlarge"  ></select>
                     <span class="help-block"></span>
                 </div>
@@ -508,7 +508,7 @@
                 <label id='labelleft' style='color:black; font-weight: bold; float:left; padding-right:20px' for="obs">esq meio</label>
                 <div class="input-prepend" style='float:left; padding-right:10px'>
                     <span id='labeltop' class="label-top">uai meio</span>
-                    <span style='color:black;' class="add-on hide_mobile"></span>
+                    <span style='color:black;' class="add-on"></span>
                     <select class="xlarge" ></select>
                     <span class="help-block"></span>
                 </div>
@@ -521,7 +521,7 @@
                 <label  style='color:black; font-weight: bold' id='labelleft' style='float:left; padding-right:20px' for="obs">esq fim</label>
                 <div class="input-prepend">
                     <span id='labeltop' class="label-top">uai fim</span>
-                    <span style='color:black;' class="add-on hide_mobile"></span>
+                    <span style='color:black;' class="add-on"></span>
                     <select class="xlarge"></select>
                     <span class="help-block"></span>
                 </div>
